--- a/snake.cbp
+++ b/snake.cbp
@@ -33,9 +33,10 @@
 		</Compiler>
 		<Unit filename="Entity.cpp" />
 		<Unit filename="Entity.h" />
+		<Unit filename="GameMechanic.cpp" />
+		<Unit filename="GameMechanic.h" />
 		<Unit filename="SDL_utils.cpp" />
 		<Unit filename="SDL_utils.h" />
-		<Unit filename="keyboard.cpp" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
